--- a/backend/config/config.yaml
+++ b/backend/config/config.yaml
@@ -1,3 +1,5 @@
-bind_addr = ":8081"
-log_level = "debug"
+server:
+  host: 127.0.0.1
+  port: 8081
+log_level: debug
 #database_url = "host=localhost dbname=restapi_dev sslmode=disable user=user1 password=password"
