--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,8 +1,8 @@
 build:
-	go build -o bin/server cmd/main.go
+	go build -o bin/server cmd/quizapp/main.go
 
 run:
-	go run cmd/main.go
+	go run cmd/quizapp/main.go
 
 test:
 	go test -v -race -timeout 30s ./...
