--- a/backend/config/docker-compose.yaml
+++ b/backend/config/docker-compose.yaml
@@ -10,5 +10,23 @@ services:
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - database-data:/var/lib/postgresql/data/
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+    command: ["redis-server", "--appendonly", "yes"]
+    volumes:
+      - redis-data:/data
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+      - HTTP_USER=root
+      - HTTP_PASSWORD=qwerty
+    ports:
+      - 8081:8081
+    depends_on:
+      - redis
 volumes:
   database-data:
+  redis-data:
